--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         <div className="flex items-center gap-2">
                             <div className={`${isDarkMode ? 'bg-blue-600' : 'bg-lime-700'} p-2 rounded-lg text-white shadow-lg`}><Icon name="MapPin" size={18}/></div>
                             <div>
-                                <h1 className="text-xl font-bold tracking-tight text-stone-800 dark:text-white">Stay Dry</h1>
+                                <h1 className={`text-xl font-bold tracking-tight ${isDarkMode ? 'text-white' : 'text-black'}`}>Stay Dry</h1>
                                 <div className={`flex items-center gap-1 text-[10px] ${theme.accentPrimary} font-medium uppercase tracking-wide`}><div className={`w-1.5 h-1.5 rounded-full ${isDarkMode ? 'bg-blue-400' : 'bg-lime-500'} animate-pulse`}></div>Ho Chi Minh City</div>
                             </div>
                         </div>
