--- a/index.html
+++ b/index.html
@@ -333,11 +333,13 @@
 
             return (
                 <div className={`min-h-screen font-sans flex flex-col transition-colors duration-300 ${theme.bg} ${theme.textMain}`}>
+                    <style>{` .leaflet-container { width: 100% !important; height: 100% !important; min-height: 500px; border-radius: 0.5rem; z-index: 1; filter: ${theme.mapFilter}; } `}</style>
+
                     <header className={`${theme.cardBg} shadow-sm border-b ${theme.cardBorder} px-4 py-3 flex items-center justify-between z-20 sticky top-0`}>
                         <div className="flex items-center gap-2">
                             <div className={`${isDarkMode ? 'bg-blue-600' : 'bg-lime-700'} p-2 rounded-lg text-white shadow-lg`}><Icon name="MapPin" size={18}/></div>
                             <div>
-                                <h1 className={`text-xl font-bold tracking-tight ${isDarkMode ? 'text-white' : 'text-stone-800'}`}>Stay Dry</h1>
+                                <h1 className={`text-xl font-bold tracking-tight ${isDarkMode ? 'text-white' : 'text-black'}`}>Stay Dry</h1>
                                 <div className={`flex items-center gap-1 text-[10px] ${theme.accentPrimary} font-medium uppercase tracking-wide`}><div className={`w-1.5 h-1.5 rounded-full ${isDarkMode ? 'bg-blue-400' : 'bg-lime-500'} animate-pulse`}></div>Ho Chi Minh City</div>
                             </div>
                         </div>
@@ -414,7 +416,7 @@
                         </div>
                         <div className={`lg:col-span-2 rounded-xl shadow-inner border ${theme.cardBorder} relative overflow-hidden`}>
                             <div id="map" ref={mapRef} style={{ minHeight: '500px', width: '100%', height: '100%' }} />
-                            <div className={`absolute bottom-4 right-4 ${isDarkMode ? 'bg-slate-900/90' : 'bg-white/90'} backdrop-blur p-3 rounded-lg shadow-lg text-xs z-[400] border ${theme.cardBorder}`}><h4 className="font-bold mb-2">Legend</h4><div className="flex items-center gap-2 mb-1"><div className="w-3 h-3 rounded-full bg-red-500 border-2 border-white shadow-sm"></div><span className={theme.textSub}>Your Location</span></div><div className="flex items-center gap-2 mb-1"><div className="w-3 h-3 rounded-full bg-red-500 opacity-50"></div><span className={theme.textSub}>Known Flood Zone</span></div><div className="flex items-center gap-2"><div className={`w-3 h-3 rounded-full ${isDarkMode ? 'bg-blue-500' : 'bg-lime-600'} opacity-20 border`}></div><span className={theme.textSub}>5km Radius</span></div></div>
+                            <div className={`absolute bottom-4 right-4 ${isDarkMode ? 'bg-slate-900/90' : 'bg-white/90'} backdrop-blur p-3 rounded-lg shadow-lg text-xs z-[400] border ${theme.cardBorder}`}><h4 className="font-bold mb-2">Legend</h4><div className="flex items-center gap-2 mb-1"><div className="w-3 h-3 rounded-full bg-red-500 border-2 border-white shadow-sm"></div><span className={theme.textSub}>Your Location</span></div><div className="flex items-center gap-2 mb-1"><div className="w-3 h-3 rounded-full bg-red-500 opacity-50"></div><span className={theme.textSub}>Known Flood Zone</span></div><div className="flex items-center gap-2"><div className={`w-3 h-3 rounded-full ${isDarkMode ? 'bg-blue-500' : 'bg-lime-600'} opacity-20 border`}></div><span className={theme.textSub}>5km Radius</span></div><div className="mt-2 text-[10px] text-gray-500 text-right">v9</div></div>
                         </div>
                     </main>
                 </div>
@@ -428,7 +430,8 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          // Force update with version query param to bypass cache
+          navigator.serviceWorker.register('/service-worker.js?v=9')
             .then(reg => {
                 reg.onupdatefound = () => {
                     const installingWorker = reg.installing;
